finish about section

--- a/style.css
+++ b/style.css
@@ -62,35 +62,109 @@ body, html {
 .jumbotron{
 	background-color: #142332;	
 	color: #B78846;
-	border: 1px solid red;
+	box-sizing: border-box;
+	padding: 120px 0px;
+	padding-bottom: 20px;
+	/*border: 1px solid white;*/
 }
 
-.big-box{
-			height: 200px;
-			width: 50%;
-			margin: 50px auto;
-			border: 2px solid white;
-			border-top: none;
-		}
+.jumbo-frame{
+	border: 5px solid #B78846;
+	width: 90%;
+	margin: 0px auto;
+}
 
-		.small-box{
-			width: 30%;
+.jumbo-img{
+	float: left;
+	width: 30%;
+	text-align: center;
+	/*border: 1px solid white;*/
+	margin-top: -110px;
+	margin-left: 10%
 
-			border-top: 2px solid white;
-			float: left;
-			box-sizing: border-box;
-		}
+}
 
-		.small-box-2{
-			width: 40%;
-			border-top: none;
-			text-align: center;
-			padding: 5px;
-			margin-top: -30px;
-		}
+.text-box{
+	max-width: 400px;
+	padding: 15px;
+	text-align: center;
+	background-color: #142332;
+	float: left;
+	/*border: 1px solid white;*/
+	margin-top: -70px;
+	margin-left: 12%;
+}
 
-		.small-box-2 p{
-			font-size: 20px;
-			margin: 0px;
-			color: white;
-		}
+.text-box p {
+	font-size: 36px;
+	color: #B78846;
+	/*border: 1px solid white;*/
+}
+
+.jumbo-main-image{
+	width: 100%;
+	/*border: 1px solid white;*/
+	background-color: #142332;
+}
+
+.btn-gold{
+	width: 350px;
+	height: 50px;
+	background-color: #B78846;
+	color: white;
+	font-size: 16px;
+	line-height: 50px;
+	margin: 30px auto;
+	font-weight: lighter;
+}
+
+.btn-gold:first-child{
+	margin-top: 50px;
+}
+
+.about{
+	height: 500px;
+	width: 100%;
+	background-image: url('image/about_background.png'); 
+	background-size: cover;
+	position: relative;
+	overflow: hidden;
+}
+
+.about-box{
+	text-align: center;
+	width: 60%;
+	padding-top: 120px;
+	padding-left: 80px;
+}
+
+p.about-title{
+	font-size: 36px;
+}
+
+p.about-text{
+	font-size: 18px;
+	margin-top: 30px;
+	line-height: 22px;
+}
+
+.about-img{
+	height: 450px;
+	position: absolute;
+	bottom: 5px;
+	right: -100px;
+}
+
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
