--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ body, html {
 	border: 1px solid white;
 }
 
+.navbar-fixed{
+	position: fixed;
+	top: 0;
+	z-index: 99999999;
+
+
+}
+
 .topbar{
 	height: 70px;
 	width: 100%;
