--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'Brandon';
+  src: url('font/Brandon_bld.otf');
+  src: url("font/Brandon_bld.otf") format("opentype");
+}
+
 body, html {
 	font-family: 'Montserrat', sans-serif;
 	height: 100%;
@@ -16,14 +22,16 @@ body, html {
 	height: 50px;
 	width: 100%;
 	background-color: #010916;
-	border-bottom: 2px solid #cb9b57;
+	border-bottom: 1px solid #cb9b57;
 	color: #cb9b57;
 }
 
 .topbar p{
 	font-size: 12px;
 	line-height: 50px;
-	margin-left: 40px
+	margin-left: 40px;
+	letter-spacing: 1.5px;
+	text-transform: uppercase;
 }
 
 .navbar{
@@ -31,6 +39,7 @@ body, html {
 	background-color: #010916;
 	color: white;
 	text-align: center;
+	font-family: 'Brandon', sans-serif;
 }
 
 .navbar ul{
@@ -41,20 +50,23 @@ body, html {
 .navbar ul li{
 	display: inline-block;
 	height: 108px;
-    width: 150px;
+    min-width: 150px;
     vertical-align: middle;
 }
+
 
 .navbar ul li a{
 	color: white;
 	text-decoration: none;
 	padding: 20px 0px;
-	transition: all 0.2s;
+	transition: all 0.1s;
 	line-height: 108px;
+	font-size: 12px;
+	letter-spacing: 1.8px;
 }
 
 .navbar ul li a:hover{
-	border-bottom: 3px solid white;
+	border-bottom: 3px solid #cb9b57;
 }
 
 .navbar-fixed{
@@ -82,6 +94,7 @@ body, html {
 	margin: 0px;
 	transition: all 0.5s;
 }
+
 
 .jumbotron{
 	background-color: #010916;
@@ -127,11 +140,13 @@ body, html {
 	width: 100%;
 	/*border: 1px solid white;*/
 	background-color: #010916;
+	margin-left: 5px;
 }
 
 .btn-gold{
 	height: 50px;
-	background-color: #cb9b57;
+	border: 2px solid #cb9b57;
+	/*background-color: #cb9b57;*/
 	color: white;
 	font-size: 16px;
 	line-height: 50px;
@@ -139,6 +154,14 @@ body, html {
 	font-weight: lighter;
 	text-align: center;
 	border-radius: 25px;
+	transition: all 0.5s;
+
+}
+
+.btn-gold:hover{
+	background-color: #cb9b57;
+	color: white;
+	cursor: pointer;
 }
 
 .btn-gold:first-child{
@@ -556,6 +579,9 @@ p.nutrition-value{
 	width: 80%;
 	height: 50px;
 	line-height: 50px;
+	background-color: #cb9b57;
+	color: white;
+	width: 100%;
 }
 
 .footer{
@@ -610,6 +636,14 @@ p.nutrition-value{
 		margin-left: 5%;
 	}
 
+	.navbar ul li {
+		width: 90px;
+	}
+
+	.navbar ul li a{
+		padding: 10px 0px;
+	}
+
 	.about-img{
 		height: 350px;
 	}
@@ -638,9 +672,7 @@ p.nutrition-value{
 	}
 
 	.navbar ul li{
-		display: inline-block;
-		height: 108px;
-	    width: 100px;
+	    min-width: 110px;
 	}
 
 	.navbar ul li#icon-list{
@@ -806,11 +838,47 @@ p.nutrition-value{
 }
 
 @media screen and (max-width: 658px){
+
+
+	.topbar{
+		display: none;
+	}
+
 	.purchase-img{
 		min-width: auto;
 		width: 100%;
 	}
 
+	.jumbotron{
+		padding: 10px 0px;
+	}
+
+	.jumbo-img{
+		display: block;
+		width: 70%;
+		border: 1px solid black;
+		margin-top: -10px;
+		margin-left: 15%;
+	}
+	.text-box{
+		margin-top: -15px;
+	}
+
+	.text-box p{
+		font-size: 24px;
+	}
+
+	.jumbo-frame{
+		border: 0;
+	}
+
+	.standard-pack, .advance-pack{
+		margin: 10px auto;
+	}
+
+	.standard-pack{
+		margin-top: 20px;
+	}
 
 	.purchase-img{
 		min-width: auto;
@@ -858,7 +926,6 @@ p.nutrition-value{
 		right: 0px;
 	}
 
-
 	.macro-percentage-value{
 		font-size: 24px;
 		font-weight: bold;
@@ -886,7 +953,6 @@ p.nutrition-value{
 
 	.work{
 		padding: 70px 0px;
-
 	}
 
 	.work-box{
@@ -897,10 +963,6 @@ p.nutrition-value{
 	.work-box .step{
 		width: 250px;
 		margin: 15px 0px;
-	}
-
-	.topbar p{
-		font-size: 12px;
 	}
 
 	.btn-gold{
