--- a/style.css
+++ b/style.css
@@ -8,7 +8,134 @@ body, html {
 	font-family: 'Montserrat', sans-serif;
 	height: 100%;
 	width: 100%;
+
 }
+
+.popup-background{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 1000;
+	background-color: rgba(0,0,0,0.7);
+	display: none;
+
+}
+
+.flip-container {
+	perspective: 1000px;
+}
+
+/* flip the pane when hovered */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+	transform: rotateY(180deg);
+}
+
+.flip-container, .signup-popup, .thank-yo {
+	width: 320px;
+	height: 480px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.signup-popup, .thank-you {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.signup-popup {
+	z-index: 1002;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.thank-you {
+	transform: rotateY(180deg);
+}
+
+.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+	transform: rotateY(180deg);
+}
+
+.signup-popup, .thank-you{
+
+	width: 80%;
+	max-width: 500px;
+	background-color: white;
+	z-index: 1001;
+	border-radius: 5px;
+	padding: 20px;
+	margin: 100px auto;
+}
+
+.mailchimp-input{
+	width: 100%;
+	height: 40px;
+	border: none;
+	color: #cb9b57;
+	outline: none;
+	box-sizing: border-box;
+	padding: 10px;
+	border-radius: 5px;
+	background-color: rgba(1,9,22, 1.0);
+	margin-top: 10px;
+	font-family: 'Brandon';
+}
+
+.mailchimp-input::-webkit-input-placeholder{
+	color: rgba(203,155,87, 0.6);
+}
+
+.pop-up-title{
+	font-size: 36px;
+	text-transform: uppercase;
+}
+
+.indicates-required{
+	color: #4a4a4a;
+	margin-top: 5px;
+	margin-bottom: 20px;
+	font-size: 14px;
+}
+
+.pop-up-logo{
+	margin: 0 auto;
+	text-align: center;
+}
+.subscribe-button{
+	background-color: #cb9b57;
+	color: white;
+	border: none;
+	height: 50px;
+	width: 100%;
+	border-radius: 5px;
+	margin-top: 10px;
+
+}
+
+.cancel{
+	text-align: center;
+	color: #010916;
+	font-family: 'Brandon';
+	margin-top: 10px;
+}
+
+.cancel:hover{
+	text-decoration: underline;
+	cursor: pointer;
+}
+
 
 .mobile-navbar{
 	display: none !important;
@@ -72,7 +199,7 @@ body, html {
 .navbar-fixed{
 	position: fixed;
 	top: 0;
-	z-index: 99999999;
+	z-index: 100;
 	transition: all 2s;
 }
 
