--- a/style.css
+++ b/style.css
@@ -26,27 +26,21 @@ body, html {
 }
 
 /* flip the pane when hovered */
-.flip-container:hover .flipper, .flip-container.hover .flipper {
+/*.flip-container:hover .flipper, .flip-container.hover .flipper {
 	transform: rotateY(180deg);
-}
+}*/
 
-.flip-container, .signup-popup, .thank-yo {
-	width: 320px;
-	height: 480px;
-}
 
 /* flip speed goes here */
 .flipper {
 	transition: 0.6s;
 	transform-style: preserve-3d;
-
 	position: relative;
 }
 
 /* hide back of pane during swap */
 .signup-popup, .thank-you {
 	backface-visibility: hidden;
-
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -64,19 +58,22 @@ body, html {
 	transform: rotateY(180deg);
 }
 
-.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
-	transform: rotateY(180deg);
-}
-
-.signup-popup, .thank-you{
+.flip-container, .signup-popup, .thank-you{
 
 	width: 80%;
 	max-width: 500px;
+	margin: 50px auto;
+
+}
+
+ .signup-popup, .thank-you {
+	width: 90%;
+	min-height: 300px;
 	background-color: white;
 	z-index: 1001;
 	border-radius: 5px;
 	padding: 20px;
-	margin: 100px auto;
+
 }
 
 .mailchimp-input{
