--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body, html {
 }*/
 
 
+
 /* flip speed goes here */
 .flipper {
 	transition: 0.6s;
@@ -56,6 +57,21 @@ body, html {
 /* back, initially hidden pane */
 .thank-you {
 	transform: rotateY(180deg);
+	text-align: center;
+}
+
+.close-btn{
+	padding: 20px;
+	border: 1px solid  #cb9b57;
+	color: #cb9b57;
+	display: inline-block;
+	border-radius: 5px;
+}
+
+.close-btn:hover{
+	background-color: #cb9b57;
+	color: white;
+	cursor: pointer;
 }
 
 .flip-container, .signup-popup, .thank-you{
